--- a/index.html
+++ b/index.html
@@ -386,17 +386,19 @@
 
   /* TO DO: Correctly assign values from resultSetRow to the given variables */
   function getMinMax(resultSetRow) {
+      keys = Object.keys(resultSetRow[0]);
+      values = Object.values(resultSetRow[0]);
       var resultSet = resultSetRow[0];
-      minX = 0;
-      maxX = 100;
-      minY = 0;
-      maxY = 100;
-      minTemp = 0;
-      maxTemp = 100;
-      minHumidity = 0;
-      maxHumidity = 100;
-      minWind = 0;
-      maxWind = 100;
+      minX = values[0]
+      maxX = values[1]
+      minY = values[2]
+      maxY = values[3]
+      minTemp = values[4]
+      maxTemp = values[5]
+      minHumidity = values[6]
+      maxHumidity = values[7]
+      minWind = values[8]
+      maxWind = values[9]
 
       lowTemp = minTemp;
       hiTemp = maxTemp;
@@ -411,7 +413,7 @@
   /* TO DO: Correctly call a SQL query to assign min and max values from columns in forestfire.
             Feel free to ignore the .then construct. This is for the use of javascript promises.*/
 
-  executeQuery ("", getMinMax)
+  executeQuery("select min(X), max(X), min(Y), max(Y), min(temp), max(temp), min(humidity), max(humidity), min(wind), max(wind) from forestfire", getMinMax)
     .then(function(msg) {
 	executeQuery (constructSQL(), myFunction);
     });
